updated email section on form

--- a/index.html
+++ b/index.html
@@ -83,12 +83,8 @@
         <h3>Contact</h3>
         <div class="form">
             <form action="form.php" method="POST">
-                <!-- Email Input 
-                <div class="email-text">Email: </div> <br>
-                <input class="email-input" type="text" name="Email" value=""><br> -->
 
-                <!-- Email from CodePen -->
-                
+                <!-- Email Input -->
                 <div>    
                     <label class="email-description" for="email">Email</label>
                 </div> <br>
